packages/ob-kube/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    uri: obudynku.pl
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      uri: obudynku.pl
  template:
    metadata:
      labels:
        uri: obudynku.pl
    spec:
      containers:
        - name: frontend
          image: ghcr.io/obudynku/ob-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      dnsPolicy: ClusterFirst
